syntax = "proto3";

package task;

option go_package = "github.com/wralith/aestimatio/server/pb/gen/task";

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PLANNED = 1;
  TASK_STATUS_STARTED = 2;
  TASK_STATUS_COMPLETED = 3;
  TASK_STATUS_ABANDONED = 4;
  TASK_STATUS_DEADLINE_PASSED = 5;
  TASK_STATUS_COMPLETED_AFTER_DEADLINE = 6;
}

message Task {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  TaskStatus status = 5;
  int64 created_at = 10;
  int64 started_at = 11;
  int64 completed_at = 12;
  int64 deadline_at = 13;
  int64 abandoned_at = 14;
}